# hillik

./: .gitattributes  README.md  pyproject.toml  setup.py
actpol_full_dr4/: EE.yaml  TE.yaml  TT.yaml  __init__.py  act_foregrounds.py  actpol_full_dr4.py  deep.yaml  foregrounds.yaml  full.yaml  params_fg.yaml  params_nui.yaml  wide.yaml
data/: CLs_CIBCIB_fmccarthy_github_545.npy  ClSZ_poiss_corr_MD2_cppp_bestCl_NILC_extra12_cibps_lmax10000.res  NN_KSZ_late.pkl  NN_KSZ_late_ells.txt  NN_KSZ_patchy_test.pkl  README.md  dl_ksz_bat_13500.txt  dl_ksz_from_agora.txt  dl_ksz_patchy_Alvarez.txt  dl_ksz_patchy_iliev.txt  dl_ksz_patchy_iliev_f250.txt  dl_ksz_patchy_mcquinn.txt  dl_ksz_spt_2021_no_doppler.txt  dl_ksz_tbo.txt  dl_tsz_from_agora.txt  fgds_info.json  ksz_Alvarez_patchy_10_05.csv  ksz_Iliev_patchy_13_div2726.csv  ksz_Mmcquin_patchy_10_div2726.csv  tkSZ_Dl_SZDB.fits
example/: hillik_act.covmat  hillik_act.yaml  hillik_act_TTTEEE.covmat  hillik_plk.yaml  hillik_plk_TTTEEE.covmat  hillik_plksptact.yaml  hillik_plksptact_TT.yaml  hillik_plksptact_TTTEEE.covmat  hillik_plksptact_TTTEEE.yaml  hillik_plksptact_ksz_AGRF.yaml  hillik_spt.covmat  hillik_spt.yaml  hillik_spt_TTTEEE.covmat
foregrounds/: foregrounds.py
hillik_act/: EE.yaml  EE_PACT.yaml  TE.yaml  TE_PACT.yaml  TT.yaml  TTTEEE.yaml  TTTEEE_PACT.yaml  TT_PACT.yaml  __init__.py  actpol_full_dr4.py  actpol_full_dr6.bibtex  actpol_full_dr6.py  foregrounds.yaml  params_ACT_EE.yaml  params_ACT_TE.yaml  params_ACT_TT.yaml  params_ACT_calib.yaml  params_ACT_dust_EE.yaml  params_ACT_dust_TE.yaml  params_ACT_ps.yaml  (+4 more)
(+470 files in other folders)
